--- a/CarBo/zh-Hant.lproj/Localizable.strings
+++ b/CarBo/zh-Hant.lproj/Localizable.strings
@@ -90,6 +90,8 @@
 "Reg.Mark"="車牌";
 "Policy id"="報價編號";
 
+
+
 "Pending"="等待報價中";
 "Processing"="已報價";
 "Completed"="完成";
@@ -237,6 +239,11 @@
 "Excess"="自負額";
 "VerificationCodeInvalid"="無效驗證碼";
 "PDFFileNotAvailable"="PDF文件不可用";
+"YourDetails"="你的資料";
+"EnterYourPhoneNo"="輸入電話號碼";
+"EnterEmailPhoneNo"="輸入電子郵件和電話號碼";
+"PleaseEnterValidMobileNo"="請輸入有效的電話號碼";
+"EnterDetails"="進入詳細信息";
 //""="請正確輸入密碼字段";
 
 //"Agreement"="協議";
