--- a/CarBo/zh-Hans.lproj/Localizable.strings
+++ b/CarBo/zh-Hans.lproj/Localizable.strings
@@ -1,10 +1,8 @@
 /* 
   Localizable.strings
   CarBo
- 
- 1.
 
-  Modified by Just Cheng
+  Created by Shirish Vispute on 20/10/16.
   Copyright © 2016 Bitware Technologies. All rights reserved.
 */
 
@@ -24,7 +22,7 @@
 "Instant Quote" ="即時報價";
 "Policy Details"="保單詳情";
 "Notifications" ="即時訊息";
-s
+
 "Notification Message"="通知消息";
 "Notification Detail"="通知详细";
 "OK"="好";
@@ -244,3 +242,8 @@ s
 "Excess"="自負額";
 "VerificationCodeInvalid"="無效驗證碼";
 "PDFFileNotAvailable"="PDF文件不可用";
+"YourDetails"="你的資料";
+"EnterYourPhoneNo"="輸入電話號碼";
+"EnterEmailPhoneNo"="輸入電子郵件和電話號碼";
+"PleaseEnterValidMobileNo"="請輸入有效的電話號碼";
+"EnterDetails"="進入詳細信息";
